--- a/index.html
+++ b/index.html
@@ -17,29 +17,10 @@
 <center>
   	<h3 class="btn btn-warning heading">AI DJ WEB APP
 	    <br>
-	    <span class="note">NOTE - Move your left-hand wrist up for Peter Pan song. 
-        Move your right-hand wrist up for Harry Potter Theme song</span>
+	    <span class="note">NOTE - Move your left-hand wrist up for XenesR dance song. 
+        Move your right-hand wrist up for Alan Walker-spectre song .</span>
   	</h3>
-    <div class="div_speed">
-      <img src="disk.gif" class="div_speed_img">
-      <br>
-      <h3 class="btn btn-danger" id="speed">
-Speed
-      </h3>
-
-    </div>
-	<br><br>
-  <div class="div_volume">
-    <img src="disk.gif" class="div_volume_img">
-    <br>
-    <h3 class="btn btn-danger" id="volume">
-      Volume
-
-    </h3>
-
-  </div>
-  <br>
-  <br>
+    
   <button class="btn btn-success button_play" onclick="play();">
 Play
   </button>
